--- a/app/client/main.css
+++ b/app/client/main.css
@@ -1,4 +1,17 @@
 /* CSS declarations go here */
+html { 
+	background: url('butterfly.jpg') no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+body {
+	background-color: rgba(255, 255, 255, 0.5);
+	padding: 10px;
+}
+
 .map-container {
 	width: 400px;
 	height: 400px;
