--- a/app/client/main.css
+++ b/app/client/main.css
@@ -9,11 +9,13 @@ html {
 
 body {
 	background-color: rgba(255, 255, 255, 0.5);
-	padding: 10px;
+	padding: 2.5vh;
+	height: 90vh;
+	margin: 2.5vh;
 }
 
 .map-container {
-	width: 400px;
+	width: 100%;
 	height: 400px;
 	max-width: 100%;
 }
