--- a/app/client/main.css
+++ b/app/client/main.css
@@ -1,5 +1,5 @@
 /* CSS declarations go here */
-html { 
+/*html { 
 	background: url('butterfly.jpg') no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -18,5 +18,5 @@ body {
 	width: 100%;
 	height: 400px;
 	max-width: 100%;
-}
+}*/
 
