Mapbox now fills and remove header template. Implement page title in session

--- a/app/client/main.css
+++ b/app/client/main.css
@@ -10,7 +10,6 @@
 	position: fixed;
 	left: 0;
 	bottom: 0;
-	height: 100vw;
 	width: 100vw;
 }
 
@@ -38,6 +37,7 @@
 
 .splash-logo {
 	width: 50vw;
+	max-width: 30vh;
 	display: block;
 	position: relative;
 	top: 20px;
