style maps to full screen

--- a/app/client/main.css
+++ b/app/client/main.css
@@ -9,6 +9,7 @@
 	left: 0;
 	bottom: 0;
 	width: 100vw;
+	height: 100vh;
 }
 
 #map {
@@ -16,6 +17,7 @@
 	left: 0;
 	bottom: 0;
 	width: 100vw;
+	height: 100vh;
 }
 
 .panel-body {
