--- a/app/client/main.css
+++ b/app/client/main.css
@@ -20,6 +20,19 @@
 	height: 100vh;
 }
 
+.logo {
+	border-radius: 100%;
+	background-color: #5665fe;
+	box-shadow: 0 0 20px black;
+}
+
+.logo-corner {
+	position: fixed;
+	width: 30vw;
+	left: 0;
+	bottom: 0;
+}
+
 .panel-body {
 	word-wrap: break-word;
 }
@@ -38,9 +51,11 @@
 	background-size: cover;
 }
 
-.splash-logo {
+.logo-splash {
 	width: 50vw;
+	height: 50vw;
 	max-width: 30vh;
+	max-height: 30vh;
 	display: block;
 	position: relative;
 	top: 50px;
