--- a/app/client/leaves.css
+++ b/app/client/leaves.css
@@ -40,10 +40,10 @@
 }
 
 .leaf.map-btn .text {
-	left: 130px;
+	left: 50vw;
 	top: 120px;
-	transform: rotate(-5deg);
-	-webkit-transform: rotate(-5deg);
+	transform: rotate(-5deg) translateX(-25px);
+	-webkit-transform: rotate(-5deg) translateX(-25px);
 }
 
 .leaf.observations-btn {
