I learned today that you can name an iron route. Sometimes the magic is so good it seems like it should be a rule and It doesn't even have the code smellz

--- a/app/client/leaves.css
+++ b/app/client/leaves.css
@@ -14,6 +14,10 @@
 	pointer-events: none;
 }
 
+.back-btn.hidden {
+	display: none;
+}
+
 .leaf.back-btn {
 	background-image: url("leaves/Leaf10Small.png");
 	background-size: 200px;
