--- a/app/client/leaves.css
+++ b/app/client/leaves.css
@@ -1,6 +1,8 @@
+/* Leaves and their leaf text. */
 .leaf {
 	display: block;
 	font-size: 2em;
+	pointer-events: none;
 }
 
 .leaf .text {
@@ -10,11 +12,8 @@
 	pointer-events: auto;
 }
 
-.leaf {
-	pointer-events: none;
-}
-
-.back-btn.hidden {
+/* The back (home) button takes you back to the navigation page */ 
+.leaf.back-btn.hidden {
 	display: none;
 }
 
@@ -34,6 +33,7 @@
 	top: 50px;
 }
 
+/* The map button sits atop the center. */
 .leaf.map-btn {
 	background: url("/leaves/Leaf1.png") no-repeat center top;
 	background-size: 200px;
@@ -66,6 +66,7 @@
 	left: 80px;
 	top: 80px;
 	transform: rotate(17deg);
+	-webkit-transform: rotate(17deg);
 }
 
 .leaf.identification-btn {
@@ -83,6 +84,7 @@
 	left: 55px;
 	top: 110px;
 	transform: rotate(-3deg);
+	-webkit-transform: rotate(-3deg);
 }
 
 .leaf.art-btn {
