--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,25 +1,23 @@
 <template name="Home">
-	<div class="navigation">
-		<div class="map-btn leaf animated fadeIn">
-			<a href="/map">
-				<div class="text">Map</div>
-			</a>
-		</div>
-		<div class="observations-btn leaf animated fadeIn">
-			<a href="/observations">
-				<div class="text">Observations<br/>Diary</div>
-			</a>
-		</div>
-		<div class="identification-btn leaf animated fadeIn">
-			<a href="/identification">
-				<div class="text">Identification</div>
-			</a>
-		</div>
-		<!-- <div class="art-btn leaf animated fadeIn">
-			<a href="/Art">
-				<div class="text">3030 Art</div>
-			</a>
-		</div> -->
+	<div class="navigation-btn">
+		<a href="/map">
+			Map
+		</a>
+	</div>
+	<div class="navigation-btn">
+		<a href="/observations">
+			Observations Diary
+		</a>
+	</div>
+	<div class="navigation-btn">
+		<a href="/identification">
+			Identification
+		</a>
+	</div>
+	<div class="navigation-btn">
+		<a href="/Art">
+			3030 Art
+		</a>
 	</div>
 </template>
 
