--- a/app/client/views/layout/layout.html
+++ b/app/client/views/layout/layout.html
@@ -3,7 +3,7 @@
 		{{> yield}}
 	</div>
 	<a href="/home">
-		<div class="leaf back-btn animated {{showHomeButton}}">
+		<div class="back-btn animated {{showHomeButton}}">
 			<div class="text">
 				Home
 			</div>
