bring in grid css and remove all styling from links on homepage

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,20 +1,20 @@
 <template name="Home">
-	<div class="navigation-btn">
+	<div class="">
 		<a href="/map">
 			Map
 		</a>
 	</div>
-	<div class="navigation-btn">
+	<div class="">
 		<a href="/observations">
 			Observations Diary
 		</a>
 	</div>
-	<div class="navigation-btn">
+	<div class="">
 		<a href="/identification">
 			Identification
 		</a>
 	</div>
-	<div class="navigation-btn">
+	<div class="">
 		<a href="/Art">
 			3030 Art
 		</a>
