--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,6 +1,6 @@
 <template name="Home">
-	<div class="">
-		<div class="">
+	<div class="navigation">
+		<div class="btn">
 			<a href="/map">
 				Map
 			</a>
