--- a/app/client/views/layout/layout.html
+++ b/app/client/views/layout/layout.html
@@ -3,11 +3,7 @@
 		{{> yield}}
 	</div>
 	<a href="/home">
-		<div class="back-btn animated {{showHomeButton}}">
-			<div class="text">
-				Home
-			</div>
-		</div>
+		<img class="back-btn" src="/back57.png"/>
 	</a>
 </template>
 
