--- a/app/client/main.css
+++ b/app/client/main.css
@@ -80,3 +80,28 @@ html {
 	font-size: 20px;
 }
 
+.navigation {
+	position: fixed;
+	top: 50%;
+	transform: translateY(-50%);
+	vertical-align: top;
+}
+
+.navigation .btn {
+	width: 100px;
+	height: 100px;
+	display: inline-block;
+	border-radius: 100%;
+	background-color: white;
+	box-shadow: 0 4px 4px black;
+	vertical-align: top;
+	text-align: center;
+}
+
+.navigation .btn a {
+	display: block;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
