--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -5,17 +5,17 @@
 				Map
 			</a>
 		</div>
-		<div class="">
+		<div class="btn">
 			<a href="/observations">
 				Observations Diary
 			</a>
 		</div>
-		<div class="">
+		<div class="btn">
 			<a href="/identification">
 				Identification
 			</a>
 		</div>
-		<div class="">
+		<div class="btn">
 			<a href="/Art">
 				3030 Art
 			</a>
