--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,24 +1,28 @@
 <template name="Home">
 	<div class="navigation">
-		<div class="btn">
-			<a href="/map">
-				Map
-			</a>
+		<div class="row">
+			<div class="btn">
+				<a href="/map">
+					Map
+				</a>
+			</div>
+			<div class="btn">
+				<a href="/observations">
+					Observations Diary
+				</a>
+			</div>
 		</div>
-		<div class="btn">
-			<a href="/observations">
-				Observations Diary
-			</a>
-		</div>
-		<div class="btn">
-			<a href="/identification">
-				Identification
-			</a>
-		</div>
-		<div class="btn">
-			<a href="/Art">
-				3030 Art
-			</a>
+		<div class="row">
+			<div class="btn">
+				<a href="/identification">
+					Identification
+				</a>
+			</div>
+			<div class="btn">
+				<a href="/art">
+					3030 Art
+				</a>
+			</div>
 		</div>
 	</div>
 </template>
