Nav bar has title and back button

--- a/app/client/views/layout/layout.html
+++ b/app/client/views/layout/layout.html
@@ -3,7 +3,10 @@
 		{{> yield}}
 	</div>
 	<a href="/home">
-		<img class="back-btn" src="/back57.png"/>
+		<header>
+			<img class="back-btn" src="/back57.png"/>
+			<span class="title">{{pageTitle}}</span>
+		</header>
 	</a>
 </template>
 
