--- a/app/client/main.css
+++ b/app/client/main.css
@@ -3,6 +3,10 @@ html {
 	-webkit-touch-callout: none;
 }
 
+.container {
+	margin-top: 40px;
+}
+
 .map-container {
 	position: fixed;
 	left: 0;
@@ -19,14 +23,22 @@ html {
 	height: 100vh;
 }
 
-.back-btn {
+header {
 	position: fixed;
 	background-color: white;
 	top: 0;
 	left: 0;
-	width: 40px;
+	right: 0;
 	height: 40px;
 	padding: 10px;
+}
+
+header img {
+	height: 100%;
+}
+
+header .title {
+	font-size: 30px;
 }
 
 .logo {
