--- a/app/client/views/layout/layout.html
+++ b/app/client/views/layout/layout.html
@@ -2,11 +2,11 @@
 	<div class="container animated fadeIn">
 		{{> yield}}
 	</div>
-	<header>
+	<div class="header">
 		<a href="/home">
 			<img class="back-btn" src="/back57.png"/>
 		</a>
-		<span class="title">{{pageTitle}}</span>
-	</header>
+		<div class="title">{{pageTitle}}</div>
+	</div>
 </template>
 
