--- a/app/client/main.css
+++ b/app/client/main.css
@@ -99,6 +99,7 @@ html {
 	position: fixed;
 	top: 50%;
 	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 	vertical-align: top;
 	width: 100%;
 }
@@ -124,6 +125,7 @@ html {
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 	color: black;
 	text-decoration: none;
 }
