--- a/app/client/main.css
+++ b/app/client/main.css
@@ -1,6 +1,16 @@
 /* CSS declarations go here */
+
+@font-face {
+	font-family: 'Copse';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Copse'), url(/Copse.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
 html {
 	-webkit-touch-callout: none;
+	font-family: 'Copse';
 }
 
 .container {
