--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -23,6 +23,20 @@
 					3030 Art
 				</a>
 			</div>
+			<div class="btn">
+			</div>
+		</div>
+		<div class="row">
+			<div class="btn">
+				<a href="/map">
+					Map
+				</a>
+			</div>
+			<div class="btn">
+				<a href="/observations">
+					Observations Diary
+				</a>
+			</div>
 		</div>
 	</div>
 </template>
