--- a/app/client/views/splash/splash.css
+++ b/app/client/views/splash/splash.css
@@ -1,12 +1,14 @@
-.splash-enter {
+.splash {
 	position: absolute;
 	top: 50vh;
 	width: 100%;
 	text-align: center;
-	font-size: 50px;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 }
 
-.splash-enter a {
-	font-size: 20px;
+.splash h1 {
+	text-shadow: 0 0 20px white;
+	margin: 0;
 }
 
