--- a/app/client/views/splash/splash.html
+++ b/app/client/views/splash/splash.html
@@ -1,10 +1,6 @@
 <template name="Splash">
 	<div class="splash">
-		<div class="splash-enter">
-			NATURE HEALS
-			<br>
-			<a href="/home">Enter</a>
-		</div>
+		<h1>Nature Heals</h1>
 	</div>
 </template>
 
