place logo in the center

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -6,6 +6,7 @@
 					Map
 				</a>
 			</div>
+
 			<div class="btn">
 				<a href="/observations">
 					Observations Diary
@@ -18,11 +19,11 @@
 					Identification
 				</a>
 			</div>
-			<div class="btn">
-				<a href="/art">
-					3030 Art
-				</a>
-			</div>
+
+			<a href="/art">
+				<img class="btn logo" src="/logo.png"/>
+			</a>
+
 			<div class="btn">
 			</div>
 		</div>
@@ -32,6 +33,7 @@
 					Map
 				</a>
 			</div>
+
 			<div class="btn">
 				<a href="/observations">
 					Observations Diary
