Add trees template and route to it. also update bottom buttons on homepage to go to audubon and tree ident info

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -29,14 +29,14 @@
 		</div>
 		<div class="row">
 			<div class="btn">
-				<a href="/map">
-					Map
+				<a href="https://www.audubon.org/field-guide">
+					What's that bird?
 				</a>
 			</div>
 
 			<div class="btn">
-				<a href="/observations">
-					Observations Diary
+				<a href="/trees">
+					What's that tree?
 				</a>
 			</div>
 		</div>
