place white backgrounds on buttonS that don't have images yet

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,20 +1,21 @@
 <template name="Home">
 	<div class="navigation">
 		<div class="row">
-			<div class="btn">
+			<div class="text btn">
 				<a href="/map">
 					Map
 				</a>
 			</div>
 
-			<div class="btn">
+			<div class="text btn">
 				<a href="/observations">
 					Observations Diary
 				</a>
 			</div>
 		</div>
+
 		<div class="row">
-			<div class="btn">
+			<div class="text btn">
 				<a href="/identification">
 					Identification
 				</a>
@@ -24,17 +25,18 @@
 				<img class="btn logo" src="/logo.png"/>
 			</a>
 
-			<div class="btn">
+			<div class="text btn">
 			</div>
 		</div>
+
 		<div class="row">
-			<div class="btn">
+			<div class="text btn">
 				<a href="https://www.audubon.org/field-guide">
 					What's that bird?
 				</a>
 			</div>
 
-			<div class="btn">
+			<div class="text btn">
 				<a href="/trees">
 					What's that tree?
 				</a>
