--- a/app/client/views/home/home.css
+++ b/app/client/views/home/home.css
@@ -24,6 +24,10 @@
 	margin: 0 1vw;
 }
 
+.navigation .btn.text {
+	background-color: rgba(255, 255, 255, 0.75);
+}
+
 .navigation .btn a {
 	display: block;
 	position: relative;
