--- a/app/client/views/splash/splash.html
+++ b/app/client/views/splash/splash.html
@@ -1,7 +1,7 @@
 <template name="Splash">
 	<div class="splash">
 		<h1>Nature Heals</h1>
-		<a href="/">Enter</a>
+		<a href="/home">Enter</a>
 	</div>
 </template>
 
