--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,23 +1,19 @@
 <template name="Home">
 	<div class="navigation">
 		<div class="row">
-			<div class="text btn">
-				<a href="/map">
-					Map
-				</a>
-			</div>
+			<a href="/map">
+				<img class="btn logo" src="/mapicon.png"/>
+			</a>
 
-			<div class="text btn">
-				<a href="/observations">
-					Observations Diary
-				</a>
-			</div>
+			<a href="/observations">
+				<img class="btn logo" src="/diaryicon.png"/>
+			</a>
 		</div>
 
 		<div class="row">
 			<div class="text btn">
-				<a href="/identification">
-					Identification
+				<a href="">
+					MLA
 				</a>
 			</div>
 
@@ -25,22 +21,19 @@
 				<img class="btn logo" src="/logo.png"/>
 			</a>
 
-			<div class="text btn">
-			</div>
+			<a href="/observations">
+				<img class="btn logo" src="/diaryicon.png"/>
+			</a>
 		</div>
 
 		<div class="row">
-			<div class="text btn">
-				<a href="https://www.audubon.org/field-guide">
-					What's that bird?
-				</a>
-			</div>
+			<a href="https://www.audubon.org/field-guide">
+				<img class="btn logo" src="/birdicon.png"/>
+			</a>
 
-			<div class="text btn">
-				<a href="/trees">
-					What's that tree?
-				</a>
-			</div>
+			<a href="/trees">
+				<img class="btn logo" src="/treeicon.png"/>
+			</a>
 		</div>
 	</div>
 </template>
