add foot icon to homepage

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -21,8 +21,8 @@
 				<img class="btn logo" src="/logo.png"/>
 			</a>
 
-			<a href="/observations">
-				<img class="btn logo" src="/diaryicon.png"/>
+			<a href="/pedometer">
+				<img class="btn logo" src="/footicon.png"/>
 			</a>
 		</div>
 
