--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -2,11 +2,11 @@
 	<div class="navigation">
 		<div class="row">
 			<a href="/map">
-				<img class="btn logo" src="/mapicon.png"/>
+				<img class="btn" src="/mapicon.png"/>
 			</a>
 
 			<a href="/observations">
-				<img class="btn logo" src="/diaryicon.png"/>
+				<img class="btn" src="/diaryicon.png"/>
 			</a>
 		</div>
 
@@ -22,17 +22,17 @@
 			</a>
 
 			<a href="/pedometer">
-				<img class="btn logo" src="/footicon.png"/>
+				<img class="btn" src="/footicon.png"/>
 			</a>
 		</div>
 
 		<div class="row">
 			<a href="https://www.audubon.org/field-guide">
-				<img class="btn logo" src="/birdicon.png"/>
+				<img class="btn" src="/birdicon.png"/>
 			</a>
 
 			<a href="/trees">
-				<img class="btn logo" src="/treeicon.png"/>
+				<img class="btn" src="/treeicon.png"/>
 			</a>
 		</div>
 	</div>
