--- a/app/client/views/home/home.css
+++ b/app/client/views/home/home.css
@@ -12,10 +12,11 @@
 }
 
 .navigation .btn {
-	width: 30vw;
-	height: 30vw;
+	width: 20vw;
+	height: 20vw;
 	max-width: 20vh;
 	max-height: 20vh;
+	padding: 5vw;
 	display: inline-block;
 	border-radius: 100%;
 	box-shadow: 0 2px 4px black;
