--- a/app/client/views/layout/layout.html
+++ b/app/client/views/layout/layout.html
@@ -1,5 +1,6 @@
 <template name="Layout">
 	{{> yield}}
+	<div class="mute"></div>
 	<div class="header">
 		<div class="title">{{pageTitle}}</div>
 		<a href="/home">
