--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -1,7 +1,8 @@
 .observations.bg {
 	position: absolute;
-	width: 100vw;
-	height: 100vh;
+	top: 0;
+	width: 100%;
+	height: 100%;
 	background-image: url("/paper.jpg");
 	z-index: -1;
 }
