add header spacer to css, rename isHome to hideNav and add header spaceer to observations page

--- a/app/client/views/layout/layout.html
+++ b/app/client/views/layout/layout.html
@@ -1,6 +1,6 @@
 <template name="Layout">
 	{{> yield}}
-	{{#unless isHome}}
+	{{#unless hideNav}}
 		<div class="header">
 			<div class="title">{{pageTitle}}</div>
 			<a href="/home">
