--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -2,9 +2,7 @@
 	<div class="observations bg">
 	</div>
 	
-	<div>
-		<h3>Observations</h3>
-	</div>
+	<div class="header-spacer"></div>
 	<button class="show-all">Show {{#if showAll}}just today's{{else}}all{{/if}}</button>
 	<button class="edit">Edit</button>
 	{{#each observations}}
