--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -6,3 +6,30 @@
 	background-image: url("/paper.jpg");
 	z-index: -1;
 }
+
+button.add {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	z-index: 1;
+}
+
+.note-compact {
+	border-bottom: 1px solid black;
+}
+
+.note-compact h1,p {
+	margin: 0;
+}
+
+.note-compact .edit {
+	float: right;
+	position: relative;
+	top: 10px;
+	right: 10px;
+}
+
+.note-compact:last-child {
+	border: none;
+}
+
