--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -1,5 +1,5 @@
 .observations.bg {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	width: 100%;
 	height: 100%;
@@ -8,7 +8,7 @@
 }
 
 button.add {
-	position: absolute;
+	position: fixed;
 	top: 10px;
 	right: 10px;
 	z-index: 1;
