can now open a note for editing

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -4,16 +4,23 @@
 	
 	<div class="header-spacer"></div>
 
-	<button class="add">+</button>
-	<div>
-		{{#each notes}}
-			<div class="note-compact" data-id={{_id}}>
-				<button class="edit">Edit</button>
-				<h1>{{title}}</h1>
-				<p>Created {{created this}}</p>
-			</div>
-		{{/each}}
-	</div>
+	{{#if editing}}
+		<button class="close">Close</button>
+		{{#with openNote}}
+			<h1 contentEditable="true">{{title}}</h1>
+		{{/with}}
+	{{else}}
+		<button class="add">+</button>
+		<div>
+			{{#each notes}}
+				<div class="note-compact" data-id={{_id}}>
+					<h1>{{title}}</h1>
+					<p>Created {{created this}}</p>
+				</div>
+			{{/each}}
+		</div>
+	{{/if}}
+
 	<!--
 	<button class="show-all">Show {{#if showAll}}just today's{{else}}all{{/if}}</button>
 	<button class="edit">Edit</button>
