--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -18,15 +18,12 @@ button.add {
 	border-bottom: 1px solid black;
 }
 
-.note-compact h1,p {
-	margin: 0;
+.note-compact * {
+	pointer-events: none;
 }
 
-.note-compact .edit {
-	float: right;
-	position: relative;
-	top: 10px;
-	right: 10px;
+.note-compact h1,p {
+	margin: 0;
 }
 
 .note-compact:last-child {
