--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -8,6 +8,7 @@
 		<button class="close">Close</button>
 		{{#with openNote}}
 			<h1 contentEditable="true">{{title}}</h1>
+			<div contentEditable="true">{{content}}</div>
 		{{/with}}
 	{{else}}
 		<button class="add">+</button>
