display correct creation dates

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -6,6 +6,7 @@
 
 	{{#if editing}}
 		<button class="close">Close</button>
+		<button class="save">Save</button>
 		{{#with openNote}}
 			<h1 contentEditable="true">{{title}}</h1>
 			<div contentEditable="true">{{content}}</div>
