--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -9,7 +9,7 @@
 		<button class="save">Save</button>
 		{{#with openNote}}
 			<h1 contentEditable="true">{{title}}</h1>
-			<div contentEditable="true">{{content}}</div>
+			<div class="content" contentEditable="true">{{content}}</div>
 		{{/with}}
 	{{else}}
 		<button class="add">+</button>
