A user can delete the note

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -7,6 +7,7 @@
 	{{#if editing}}
 		<button class="close">Close</button>
 		<button class="save">Save</button>
+		<button class="delete">Delete</button>
 		{{#with openNote}}
 			<h1 contentEditable="true">{{title}}</h1>
 			<div class="content" contentEditable="true">{{content}}</div>
