fix some syntax errors and remove defaults for notes

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -8,6 +8,7 @@
 		<button class="close">Close</button>
 		<button class="save">Save</button>
 		<button class="delete">Delete</button>
+		<button class="picture">Add a picture</button>
 		{{#with openNote}}
 			<div class="note-expanded">
 				<h1 contentEditable="true">{{title}}</h1>
