add mla logo to mla button

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -11,11 +11,9 @@
 		</div>
 
 		<div class="row">
-			<div class="text btn">
-				<a href="">
-					MLA
-				</a>
-			</div>
+			<a href="">
+				<img class="btn logo" src="/mla.png"/>
+			</a>
 
 			<a href="/art">
 				<img class="btn logo" src="/logo.png"/>
