--- a/app/client/main.css
+++ b/app/client/main.css
@@ -13,11 +13,11 @@ html {
 	font-family: 'Copse';
 	width: 100vw;
 	height: 100vh;
-	background: url('/background.jpg') center center fixed; 
+	/*background: url('/background.jpg') center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 	z-index: -2;
 }
 
