--- a/app/client/views/splash/splash.html
+++ b/app/client/views/splash/splash.html
@@ -1,4 +1,5 @@
 <template name="Splash">
+	<div class="splash-bg"></div>
 	<div class="splash">
 		<h1>Nature Heals</h1>
 		<a href="/home">Enter</a>
