Add mla route. Add spacer to layout to account for header.

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -11,8 +11,8 @@
 		</div>
 
 		<div class="row">
-			<a href="">
-				<img class="btn logo" src="/mla.png"/>
+			<a href="/mla">
+				<img class="btn" src="/mla.png"/>
 			</a>
 
 			<a href="/art">
