Add images for mla page

--- a/app/client/views/mla/mla.html
+++ b/app/client/views/mla/mla.html
@@ -1,3 +1,25 @@
 <template name="MLA">
-	Information here about the Landscape Arboretum
+	<div class="navigation">
+		<div class="row">
+			<div class="btn">
+				<a href="http://arboretum.umn.edu/gardensandcollections.aspx">
+					<img src="/gardens.png"/>
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="btn">
+				<a href="http://arboretum.umn.edu/eventsprograms.aspx">
+					<img src="/events.png"/>
+				</a>
+			</div>
+
+			<div class="btn">
+				<a href="http://arboretum.umn.edu/planyourvisit.aspx">
+					<img src="/plan.png"/>
+				</a>
+			</div>
+		</div>
+	</div>
 </template>
