audubon links to external page using in app browser

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -25,7 +25,7 @@
 		</div>
 
 		<div class="row">
-			<a href="https://www.audubon.org/field-guide">
+			<a onclick="window.open('https://www.audubon.org/field-guide', '_blank', 'location=yes');">
 				<img class="btn" src="/birdicon.png"/>
 			</a>
 
