--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -3,7 +3,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-image: url("/paper.jpg");
+	background-image: url("/paper.png");
 	z-index: -1;
 }
 
