wip fixing link to audubon field guie

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -25,9 +25,7 @@
 		</div>
 
 		<div class="row">
-			<a onclick="window.open('https://www.audubon.org/field-guide', '_blank', 'location=yes');">
-				<img class="btn" src="/birdicon.png"/>
-			</a>
+			<img class="btn bird-field-guide" src="/birdicon.png"/>
 
 			<a href="/trees">
 				<img class="btn" src="/treeicon.png"/>
