--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -1,4 +1,8 @@
 <template name="Home">
+	<div  class="home title">
+		<h1>Nature Heals</h1>
+	</div>
+
 	<div class="navigation">
 		<div class="row">
 			<a href="/map">
@@ -31,6 +35,10 @@
 				<img class="btn" src="/treeicon.png"/>
 			</a>
 		</div>
+	</div>
+
+	<div class="home quote">
+		<h3>A connection to nature is essential for health and wellbeing.</h3>
 	</div>
 </template>
 
