--- a/app/client/views/observations/observations.css
+++ b/app/client/views/observations/observations.css
@@ -42,8 +42,13 @@ div#action-btns {
 	text-align: center;
 }
 
+#action-btns .obs {
+	padding-top: 5px;
+}
+
 .note-compact {
 	border-bottom: 1px solid black;
+	padding: 10px 0;
 }
 
 .note-compact * {
