Can hide the observation diary message

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -2,7 +2,9 @@
 	<div class="observations bg">
 	</div>
 
-	{{> ObservationsMsg}}
+	{{#unless hideMsg}}
+		{{> ObservationsMsg}}
+	{{/unless}}
 	
 	{{#if editing}}
 		<div id="action-btns">
