remove plus from picture button in observation diary

--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -11,7 +11,7 @@
 			<div class="obs close">Cancel</div>
 			<div class="obs save">Save</div>
 			<div class="obs delete">Delete</div>
-			<div class="obs picture">+ Picture</div>
+			<div class="obs picture">Picture</div>
 		</div>
 		{{#with openNote}}
 			<div class="note-expanded">
