--- a/app/client/views/layout/layout.css
+++ b/app/client/views/layout/layout.css
@@ -24,5 +24,9 @@
 	font-size: 30px;
 	color: black;
 	vertical-align: top;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 }
 
