User is warned before leaving 30 x 30 app when going to 30 x 30 website

--- a/app/client/main.css
+++ b/app/client/main.css
@@ -66,3 +66,11 @@ html {
 	height: 60px;
 }
 
+div.button {
+	background-color: #aceee5;
+	box-shadow: 0 3px 5px black;
+	display: inline-block;
+	padding: 10px;
+	border-radius: 5px;
+	position: absolute;
+}
