link bird button to fiel gudie message

--- a/app/client/views/home/home.html
+++ b/app/client/views/home/home.html
@@ -29,7 +29,9 @@
 		</div>
 
 		<div class="row">
-			<img class="btn bird-field-guide" src="/birdicon.png"/>
+			<a href="/birds">
+				<img class="btn bird-field-guide" src="/birdicon.png"/>
+			</a>
 
 			<a href="/trees">
 				<img class="btn" src="/treeicon.png"/>
