create birds route

--- a/app/client/views/birds/birds.html
+++ b/app/client/views/birds/birds.html
@@ -1,5 +1,5 @@
 <template name="Birds">
-	<div id="birds">
+	<div id="message">
 		<p>You are about to go to the Audubon's "Guide to North American Birds". You will be leaving this application. At any time you can hit "done" to return to this application.</p>
 		<p>This website will help you identify birds through pictures, sounds and other characteristics of the birds.</p>
 		<div class="button go">Go to external site</div>
