--- a/app/client/views/art/art.html
+++ b/app/client/views/art/art.html
@@ -1,5 +1,5 @@
 <template name="Art">
-	<div id="art">
+	<div id="message">
 		<p>You are about to go to the official website for the 30 x 30 project. You will be leaving this application. At any time you can hit "done" to return to this application.</p>
 		<div class="button go">Go to external site</div>
 		<a href="/home">
