--- a/app/client/views/layout/layout.css
+++ b/app/client/views/layout/layout.css
@@ -6,7 +6,7 @@
 	box-shadow: 0 0 10px black;
 	position: fixed;
 	background-color: white;
-	top: 20px;
+	top: 0;
 	left: 0;
 	right: 0;
 	height: 40px;
