--- a/app/client/views/observations/observations.html
+++ b/app/client/views/observations/observations.html
@@ -26,7 +26,7 @@
 		<div>
 			{{#each notes}}
 				<div class="note-compact" data-id={{_id}}>
-					<h1>{{title}}</h1>
+					<h1>{{title this}}</h1>
 					<p>Created {{created this}}</p>
 				</div>
 			{{/each}}
